--- a/docker-compose.merged.yml
+++ b/docker-compose.merged.yml
@@ -65,11 +65,13 @@ services:
       - POSTGRES_PORT
       - IRIS_SECRET_KEY
       - IRIS_SECURITY_PASSWORD_SALT
+      - PORT
     networks:
       - iris_backend
+    ports:
+      - ${IRIS_UPSTREAM_PORT}:${IRIS_UPSTREAM_PORT}
     expose:
       - ${IRIS_UPSTREAM_PORT}
-      - ${INTERFACE_HTTPS_PORT}
 
   worker:
     image: ${APP_IMAGE_NAME:-ghcr.io/dfir-iris/iriswebapp_app}:${APP_IMAGE_TAG:-v2.4.20}
