fix: hardcode port 8000 instead of using IRIS_UPSTREAM_PORT env variable

--- a/docker-compose.merged.yml
+++ b/docker-compose.merged.yml
@@ -72,7 +72,7 @@ services:
     command:
       [
         "./wait-for-iriswebapp.sh",
-        "app:${IRIS_UPSTREAM_PORT}",
+        "app:8000",
         "./iris-entrypoint.sh",
         "iris-worker",
       ]
