--- a/docker-compose.merged.yml
+++ b/docker-compose.merged.yml
@@ -20,12 +20,9 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: iriswebapp_rabbitmq
     restart: always
-    networks:
-      - iris_backend
 
   db:
-    build:
-      context: docker/db
+    image: ${DB_IMAGE_NAME:-ghcr.io/dfir-iris/iriswebapp_db}:${DB_IMAGE_TAG:-v2.4.20}
     container_name: iriswebapp_db
     restart: always
     environment:
@@ -34,15 +31,11 @@ services:
       - POSTGRES_ADMIN_USER
       - POSTGRES_ADMIN_PASSWORD
       - POSTGRES_DB
-    networks:
-      - iris_backend
     volumes:
       - db_data:/var/lib/postgresql/data
 
   app:
-    build:
-      context: .
-      dockerfile: docker/webApp/Dockerfile
+    image: ${APP_IMAGE_NAME:-ghcr.io/dfir-iris/iriswebapp_app}:${APP_IMAGE_TAG:-v2.4.20}
     container_name: iriswebapp_app
     command: ["nohup", "./iris-entrypoint.sh", "iriswebapp"]
     volumes:
@@ -65,13 +58,9 @@ services:
       - IRIS_SECURITY_PASSWORD_SALT
     expose:
       - "8000"
-    networks:
-      - iris_backend
 
   worker:
-    build:
-      context: .
-      dockerfile: docker/webApp/Dockerfile
+    image: ${APP_IMAGE_NAME:-ghcr.io/dfir-iris/iriswebapp_app}:${APP_IMAGE_TAG:-v2.4.20}
     container_name: iriswebapp_worker
     restart: always
     command:
@@ -100,15 +89,9 @@ services:
       - IRIS_SECURITY_PASSWORD_SALT
       - IRIS_WORKER
       - LOG_LEVEL
-    networks:
-      - iris_backend
 
 volumes:
   iris-downloads:
   user_templates:
   server_data:
   db_data:
-
-networks:
-  iris_backend:
-    name: iris_backend
